# Projet-Os-2T

./: .gitignore  CMakeLists.txt  FracorpChamp.drawio  Projet_Francorchamps.docx  README.md  config.h  config.txt  config_test.txt  course.c  main.c  test_parser.c
Libs/: Settings.c  Settings.h  SettingsParser.c  SettingsParser.h  course.c  course.h  display.c  display.h  logger.c  logger.h  randomLib.c  randomLib.h  randomRange.c  randomRange.h  sharedmem.c  sharedmem.h  sorting.c  sorting.h  voiture.h
